# gbx_predict

actuator_interface/: CMakeLists.txt  CMakeLists.txt.bak  MIGRATION_NOTES.md  README.md  build_test.sh
actuator_interface/include/actuator_interface/: actuator_interface.h
actuator_interface/include/actuator_interface/can_manager/: can_manager.h
actuator_interface/include/actuator_interface/can_manager/can_devices/: can_actuator.h  rm_actuator.h
actuator_interface/include/actuator_interface/can_manager/can_interface/: can_bus.h  socketcan.h
actuator_interface/include/actuator_interface/common/: lp_filter.h
actuator_interface/src/: actuator_interface.cpp
actuator_interface/src/can_manager/: can_manager.cpp
actuator_interface/src/can_manager/can_devices/: rm_actuator.cpp
actuator_interface/src/can_manager/can_interface/: can_bus.cpp  socketcan.cpp
actuator_interface/test/config/: test_virtual_can.yaml
actuator_interface/test/scripts/: test_motors.py
gbx_predict/: .gitignore  CMakeLists.txt  PARAMETER_PRECEDENCE.md  README.md  USAGE.md  package.xml
gbx_predict/config/: image_stitch_params.yaml
gbx_predict/gbx_predict/: __init__.py
gbx_predict/include/gbx_predict/: image_stitch_node.hpp
gbx_predict/launch/: image_stitch.launch.py  image_stitch_flexible.launch.py  test_image_stitch.launch.py
gbx_predict/model/: image_cropping_inference.py
gbx_predict/model/test/: crop_info.txt
gbx_predict/scripts/: convert_homography_to_yaml.py  image_stitch_node.py
gbx_predict/scripts/dual_camera_calibration/: dual_camera_calibration.py
gbx_predict/scripts/dual_camera_calibration/calibration_images/: H_right_to_left.yaml
gbx_predict/scripts/qt/: gbx_predict_qt.py
gbx_predict/src/: image_stitch_node.cpp
motor/actuator_interface/: IMPLEMENTATION_STATUS.md  actuator_interface_hw.xml  package.xml
motor/actuator_interface/include/actuator_interface/can_manager/can_devices/: can_device.h  rm_actuator.h
motor/actuator_interface/include/actuator_interface/can_manager/can_interface/: can_bus.h  socketcan.h
motor/actuator_interface/include/actuator_interface/common/: lp_filter.h
motor/actuator_interface/src/: ros2_control_hw.cpp
motor/actuator_interface/src/can_manager/: can_manager.cpp
motor/actuator_interface/src/can_manager/can_devices/: rm_actuator.cpp
motor/actuator_interface/src/can_manager/can_interface/: can_bus.cpp  socketcan.cpp
motor/actuator_interface/src/common/: lp_filter.cpp
motor/actuator_interface/test/config/: test_controllers.yaml
motor/actuator_interface/test/launch/: test_virtual_can.launch.py
motor/actuator_interface/test/scripts/: run_virtual_can_test.sh  virtual_can_simulator.py
motor/actuator_interface/test/urdf/: test_robot.urdf.xacro
motor/photo_station_v2/: CMakeLists.txt  README.md  package.xml
motor/photo_station_v2/config/: photo_station_v2_controllers.yaml  photo_station_v2_hw.yaml
motor/photo_station_v2/launch/: photo_station_v2.launch.py  test_photo_station_v2.launch.py
motor/photo_station_v2/rviz/: photo_station_v2.rviz
motor/photo_station_v2/urdf/: photo_station_v2.urdf.xacro
